[gd_scene load_steps=33 format=2]

[ext_resource path="res://content/gadgets/shield/hud/ShieldHud.gd" type="Script" id=1]
[ext_resource path="res://content/gadgets/shield/hud/charge_slot.png" type="Texture" id=2]
[ext_resource path="res://content/gadgets/shield/hud/charge.png" type="Texture" id=3]
[ext_resource path="res://content/gadgets/shield/hud/bar1.png" type="Texture" id=4]
[ext_resource path="res://content/gadgets/shield/hud/laststand_sheet.png" type="Texture" id=5]
[ext_resource path="res://content/gadgets/shield/hud/overcharge_sheet.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 11, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 22, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 33, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 44, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 55, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 66, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 77, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 88, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 99, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 110, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 121, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 132, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 8, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 24, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 40, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 56, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 72, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 88, 0, 8, 9 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "overcharged",
"speed": 10.0
}, {
"frames": [  ],
"loop": false,
"name": "nothing",
"speed": 1.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "laststand",
"speed": 10.0
} ]

[node name="ShieldHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
size = Vector2( 2, 2 )
layoutWeights = Vector2( 1, 3 )
layoutPriority = 10

[node name="Slot1" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 11.0
margin_bottom = 5.0
texture = ExtResource( 2 )

[node name="Charge1" type="TextureRect" parent="Slot1"]
margin_right = 7.0
margin_bottom = 7.0
texture = ExtResource( 3 )

[node name="Slot2" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 4.0
margin_right = 11.0
margin_bottom = 8.0
texture = ExtResource( 2 )

[node name="Charge2" type="TextureRect" parent="Slot2"]
margin_right = 7.0
margin_bottom = 7.0
texture = ExtResource( 3 )

[node name="Slot3" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 7.0
margin_right = 11.0
margin_bottom = 11.0
texture = ExtResource( 2 )

[node name="Charge3" type="TextureRect" parent="Slot3"]
margin_right = 7.0
margin_bottom = 7.0
texture = ExtResource( 3 )

[node name="Bar" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 3.0
margin_right = 12.0
margin_bottom = 21.0
texture = ExtResource( 4 )

[node name="ShieldFilling" type="ColorRect" parent="Bar"]
margin_left = 7.0
margin_top = 8.0
margin_right = 12.0
margin_bottom = 15.0
grow_vertical = 0
rect_rotation = 180.0
color = Color( 0.533333, 0.380392, 0.862745, 1 )

[node name="AbilityDurationFilling" type="ColorRect" parent="Bar"]
margin_left = 7.0
margin_top = 8.0
margin_right = 12.0
margin_bottom = 15.0
grow_vertical = 0
rect_rotation = 180.0
color = Color( 0.313726, 0.309804, 0.235294, 1 )

[node name="OverchargeFilling" type="ColorRect" parent="Bar"]
margin_left = 6.0
margin_top = 8.0
margin_right = 9.0
margin_bottom = 15.0
grow_vertical = 0
rect_rotation = 180.0
color = Color( 0.219608, 0.4, 0.235294, 1 )

[node name="OverchargeOverlay" type="AnimatedSprite" parent="Bar"]
visible = false
position = Vector2( 5, 13 )
frames = SubResource( 26 )
animation = "overcharged"

[node name="LaststandOverlay" type="AnimatedSprite" parent="Bar"]
visible = false
position = Vector2( 4, 13 )
frames = SubResource( 26 )
animation = "laststand"
